--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,7 @@ betfair_1.0.0.zip
 03 Bogts/Betfair/
 03 Bots/Matched_odds/
 03 Bots/Current_bets/
+03 Bots/Completed_bets/
 03 Bots/Oddsportal/
 1.html
+03 Bots/s3_key.txt
